# ChangeLog for dev-ruby/podcast
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/podcast/ChangeLog,v 1.13 2014/08/25 14:26:01 mrueg Exp $

  25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> podcast-0.0.4-r2.ebuild:
  Add ruby21 target.

*podcast-0.0.4-r2 (29 Jan 2014)

  29 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +podcast-0.0.4-r2.ebuild,
  -podcast-0.0.4-r1.ebuild:
  Add ruby20 support. Remove ruby18 support.

  10 Sep 2012; Hans de Graaff <graaff@gentoo.org> podcast-0.0.4-r1.ebuild:
  Add ruby19, ree18. Move to EAPI=4.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  24 Jun 2011; Raúl Porcel <armin76@gentoo.org> podcast-0.0.4-r1.ebuild:
  Drop ia64 keywords

  13 Aug 2010; Hans de Graaff <graaff@gentoo.org> -podcast-0.0.4.ebuild:
  Remove old version.

*podcast-0.0.4-r1 (27 Jun 2010)

  27 Jun 2010; Hans de Graaff <graaff@gentoo.org> +podcast-0.0.4-r1.ebuild:
  Convert to ruby-fakegem.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  podcast-0.0.4.ebuild:
  Various cleanups.

  20 Dec 2009; Hans de Graaff <graaff@gentoo.org> podcast-0.0.4.ebuild:
  Remove obsolete virtual/ruby dependency.

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> podcast-0.0.4.ebuild:
  Fix deprecated use of USE_RUBY="any".

  08 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  podcast-0.0.4.ebuild:
  Added ~x86

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> podcast-0.0.4.ebuild:
  Mark 0.0.4 ~ia64

*podcast-0.0.4 (10 Jan 2006)

  10 Jan 2006; Grant Goodyear <g2boojum@gentoo.org> +metadata.xml,
  +podcast-0.0.4.ebuild:
  New package