@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST podcast-0.0.4.gem 1166848 SHA256 e9b88c534368a243389867eed4d123567a1d629776fc65fe1ee3c96056e00cad SHA512 5be795a7f614f616e93ed2e1fdcbfcd1513fabfc6a728dee0216907d951ceab37e909d2cdc44697f7d6497e21537bafa68bdac196255233cc3126e40c48dec95 WHIRLPOOL cc5b6e79f18f77e90fd8ec90597e0585d8716c96dbe9c7b8482d6cb6eceebc3a43432381e9db9ecfaae138dff68a67d5f5a011f53efed3d80a7639e8f762463a
-EBUILD podcast-0.0.4-r2.ebuild 664 SHA256 c81d7877ceaefccdb98e08ef638d8266a4e14e6f6bc2d23dd88f1a34e2a0b408 SHA512 8ac64222f1c9aa44afb69e2b062146718f2f941292c34ba133ccf01f6178c86541b145a74dc15b3c5d8e1336a2260499c38e4168aafdae7f928e7b04d4099140 WHIRLPOOL 7a64f984e5129d4c33f198755d606491b920ecc94f799c15cf2aaf65874294837fbdbd58ab730e5d1a0f260d93c3fe1750a586ea47bcbd5d2c3b530c5beff79e
-MISC ChangeLog 1720 SHA256 1e6a605356a749818118846c5ec8933cf2369b532ca07cbdbd731689bdb9b55c SHA512 ac5be71fceb8d2505ae1c839a5b6570b97f3728d5ae400f7a67c146316e439a967b54137eac56431bc2dc6732f0203f3ec1ae10381a054d14c8551048086165c WHIRLPOOL 56988d7e5977a96c755f02a430993267c44469d0fc60ce655bae6146ec0e6d33bbd24b8a42bde2a599380c9e3530239b9ff82fbe4065ac87714112e0cf37bdc2
+EBUILD podcast-0.0.4-r2.ebuild 672 SHA256 4c0893c0f08d179d7e02ee0193cd42d8c68cbca6a8f51f44775ecfb1ea1c0bd5 SHA512 79aa81672f3f1299cb2d35c28d52863024eb054d4e140ca126b99f5386bf5e176c59f79c01f0d1a545b8030f201ebf69f26e4fc27ff499846d2c8e48780835de WHIRLPOOL 9d783b91624c1226aef8c642503cb76c78d6582cfdd4645eaeb692cfaf73bb30d5ba71b9ed12a66a5d3942dd91486fc6471f89e96e7d9ba0536d8f3cd41d7bea
+MISC ChangeLog 1811 SHA256 fef52c4872e1047f64e6622cf6a75982222aaf9e3f8b05fa37563f799fb2c216 SHA512 762ea4e7af47716e47b051ad0a14f29e7402253a97072f017d38078bb4ec10265ce4344e18e653dbb8e5ee82e905905521ef1c73e23103a2c3d24c928bef88bc WHIRLPOOL 13854dd6e4467a38a1fa93cd6463e0d9655e6c3b4b910b04f5f48ded16d2324ea89c8bfd457e9ae6a76bb0be0fb77db189618a1ae113d9baecc0f5e10669c5bb
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlUpNqcACgkQiIP6VqMIqNck9AD/QuCfiyUFfwDwV6EO3dKMOgi0
+GzirPVbZLJS9tdYyMagA/R+kdQD8R7008mXh9S8pgmQV9uIwuFlkZftL5A7AN7p+
+=gxFS
+-----END PGP SIGNATURE-----
