@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( dev-ruby/ruby-mp3info[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/ruby-mp3info[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/ruby-mp3info[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=test? ( ruby_targets_ruby19? ( dev-ruby/ruby-mp3info[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/ruby-mp3info[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/ruby-mp3info[ruby_targets_ruby21] ) ruby_targets_ruby22? ( dev-ruby/ruby-mp3info[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) )
 DESCRIPTION=A pure Ruby library for generating podcasts from mp3 files
 EAPI=5
 HOMEPAGE=http://podcast.rubyforge.org/
-IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 test
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=ruby_targets_ruby19? ( dev-ruby/ruby-mp3info[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/ruby-mp3info[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/ruby-mp3info[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+RDEPEND=ruby_targets_ruby19? ( dev-ruby/ruby-mp3info[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/ruby-mp3info[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/ruby-mp3info[ruby_targets_ruby21] ) ruby_targets_ruby22? ( dev-ruby/ruby-mp3info[ruby_targets_ruby22] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 )
 SLOT=0
 SRC_URI=mirror://rubygems/podcast-0.0.4.gem
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	85dc5414cfdfbdf5b56e6d8345d2c658	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=157a1e2f9a0aab3a89c3c6eed66c3465
+_md5_=8c1711061f3e013af52f8b46b2bde12d
