@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/podcast
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/podcast/ChangeLog,v 1.13 2014/08/25 14:26:01 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/podcast/ChangeLog,v 1.14 2015/04/11 14:58:42 graaff Exp $
+
+  11 Apr 2015; Hans de Graaff <graaff@gentoo.org> podcast-0.0.4-r2.ebuild:
+  Add ruby22.
 
   25 Aug 2014; Manuel Rüger <mrueg@gentoo.org> podcast-0.0.4-r2.ebuild:
   Add ruby21 target.
